2006-06-29  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* configure.ac: Fixed a bug with $EMKOPTS handling.
	Removed two debugging messages. Fixed a typo with `debug_info'.

	* src/exmpp_xml.erl: The function get_path_s/2 wasn't exported; also
	it now handles old path component format.
	(remove_attribute_from_list): Rewritten this completly broken
	function.
	(xmlnselement_to_xmlelement): Now handle properly default and prefixed
	namespaces for elements and attributes.

	* src/iconv.erl, src/stringprep.erl: Fixed Erlang warnings.

	* testsuite/: More complete testsuite, with coverage checking.

	* testsuite/check_xml_converters.erl: Renamed from
	check_xml_serializer.erl to add other tests thant juste
	serialization.

2006-06-28  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	The whole project uses the Autotools now.

	* include/exmpp.hrl: Add a prefix member to xmlnselement record. Add
	an xmlattr record to handle attribute (with namespace support).

	* src/exmpp_xml.erl: New API (more consistent) with better namespace
	support (even for attributes). There's a compatibility layer for the
	old API, which can be enabled by defining WITH_DEPRECATED_API at
	compile time.

	* c_src/expat_drv.c: Imporve namespace support, especially for
	attributes. Add an option to put element and attribute name as
	atom().

	* c_src/tls_drv.c (tls_drv_control): Fixed a warning about different
	types in an affectation.

	* testsuite/: Add a testsuite.